--- a/ipTracker/index.html
+++ b/ipTracker/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./imgs/favicon-32x32.png">
   
   <title>Frontend Mentor | IP Address Tracker</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
